green-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - image: hashicorp/http-echo
        name: green-app-container
        args: ["-listen=:8081", '-text="I am green"']

---

apiVersion: v1
kind: Service
metadata:
  name: green-app-svc
spec:
  selector:
    app: green-app
  ports:
  - name: green-app-port
    targetPort: 8081
    port: 8081
    protocol: TCP
  type: ClusterIP
