ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blue-app-svc
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-app-svc
            port:
              number: 8080
  ingressClassName: nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-green-app-svc
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-app-svc
            port:
              number: 8080
  ingressClassName: nginx
